--- a/src/scss/_app-mat-override.scss
+++ b/src/scss/_app-mat-override.scss
@@ -357,7 +357,7 @@
   }
 
   &.app-datepicker {
-    $app-width: 160px;
+    $app-width: 142px;
     flex: 1 1 $app-width;
     max-width: $app-width;
     min-width: $app-width;
